--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -28,7 +28,7 @@
 </div>
 <div id="informativo">
 <h4 class="texto-informativo">Projeto desenvolvido com a utilização de HTML5, CSS3 e JS simples e puro, para cadeira de Projetos Web I. Não foi utilizado nenhuma biblioteca ou framework nesta simples aplicação, que por sua vez que engloba três mini projetos - Uma calculadora básica, um simulador de pagamentos e um gerador de números para a mega cena. O projeto em questão foi comentado nas partes mais necessárias, bem como funções e suas respectivas funcionalidades. Por ser um projeto simples e didático, onde foram construídas ferramentas que podem ser aplicadas no mundo real, bem como usadas por outros estudantes em suas respetivas atividades e/ou projetos.
-    Esta aplicação estará disponível em meu <a href="https://github.com/Thomas-William" target="_blank">GitHub</a>.</h4>
+    Esta aplicação estará disponível em meu <a href="https://github.com/Thomas-William" target="_blank">GitHub</a>. Espero que seja útil a você, de alguma forma, algum dia.</h4>
 </div>
 <div id="rodape">
 <h4 class="direitos-autorais">&#169 - Copyright - <a href="https://www.linkedin.com/in/thomas-william-8aa020173/" target="_blank">Thomas</a></h4> 
