A função de porcentagem ainda está com um bug

--- a/calculadora.html
+++ b/calculadora.html
@@ -31,7 +31,7 @@
     <tr>
         <td><input type="button" name="numponto" class="simbolosEspeciais" value="." onclick="agrupar('.');"/></td>
         <td><input type="button" name="numlimpa" class="simbolosEspeciais" value="C" onclick="limpar();"/></td>
-        <td><input type="button" name="numporcentagem" class="simbolosEspeciais" value="%" onclick="agrupar('/100');"/></td>
+        <td><input type="button" name="numporcentagem" class="simbolosEspeciais" value="%" onclick="agrupar('/100');"/></td> <!--A função de porcentagem ainda está com um bug-->
         <td><input type="button" name="numdividir" class="simbolosEspeciais" value="÷" onclick="agrupar('/');"/></td>
     </tr>
     <tr>
